src/test/ui/attributes/register-attr-tool-fail.stderr
error: `register_attr` only accepts identifiers
  --> $DIR/register-attr-tool-fail.rs:7:18
   |
LL | #![register_attr(a::b)]
   |                  ^^^^ not an identifier

error: attribute `attr` was already registered
  --> $DIR/register-attr-tool-fail.rs:10:24
   |
LL | #![register_attr(attr, attr)]
   |                  ----  ^^^^
   |                  |
   |                  already registered here

error: `register_tool` only accepts identifiers
  --> $DIR/register-attr-tool-fail.rs:8:18
   |
LL | #![register_tool(a::b)]
   |                  ^^^^ not an identifier

error: tool `tool` was already registered
  --> $DIR/register-attr-tool-fail.rs:11:24
   |
LL | #![register_tool(tool, tool)]
   |                  ----  ^^^^
   |                  |
   |                  already registered here

error: malformed `register_attr` attribute input
  --> $DIR/register-attr-tool-fail.rs:4:1
   |
LL | #![register_attr]
   | ^^^^^^^^^^^^^^^^^ help: must be of the form: `#![register_attr(attr1, attr2, ...)]`

error: malformed `register_tool` attribute input
  --> $DIR/register-attr-tool-fail.rs:5:1
   |
LL | #![register_tool]
   | ^^^^^^^^^^^^^^^^^ help: must be of the form: `#![register_tool(tool1, tool2, ...)]`

error: aborting due to 6 previous errors

